--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   background: #0dc145;
   color: white;
-  font-family: Arial;
+  font-family: Arial; /* Remember a fallback font like sans-serif*/
   font-size: 16px;
 }
 
 nav {
   text-align: right;
-    width: 60 %;
+    width: 60%;
     margin: 0 0 3em 0;
     padding: 0;
     background-color: #f2f2f2;
@@ -25,7 +25,7 @@ main {
 .intro {
   text-align: center;
   font-size: 40px;
-
+/* remove empty spaces */
 }
 
 h1 {
@@ -56,4 +56,5 @@ footer {
   background: #545953;
   color: white;
   margin:-150px auto 0;
+  /* Avoid negative margins when possible */
 }
